fix listOf usage